--- a/refman_header.tex
+++ b/refman_header.tex
@@ -23,7 +23,7 @@
 \usepackage{url}
 \usepackage{calc}
 \usepackage{array}
-\usepackage{fancyhdr}
+\usepackage{scrpage2}
 \usepackage[pdftex]{graphicx}
 \usepackage{color}
 \usepackage{listings}
@@ -35,7 +35,7 @@
             linkcolor=blue
            ]{hyperref}
 \usepackage{doxygen}
-\pagestyle{headings}
+\pagestyle{scrheadings}
 \makeindex
 \begin{document}
 
@@ -45,7 +45,6 @@
 \setcounter{tocdepth}{1}
 
 \frontmatter
-
 \pagenumbering{roman}
 \title{Csound and CsoundVST \\ Reference Manual}
 \author{\emph{By} \\ \\Barry Vercoe \\ \\ \emph{Contributors} \\ \\ \\ \emph{Edited by} \\ \\ John ffitch \\ \\ Jean Piche \\ \\ Peter Nix \\ \\ Richard Boulanger \\ \\ Rasmus Ekman \\ \\ David Boothe \\ \\ Kevin Conder \\ \\ Michael Gogins \\ \texttt{gogins@pipeline.com} \\ }
