Updated extensions section of manual, improved table formatting.

--- a/doc/manual/cps2pch.tex
+++ b/doc/manual/cps2pch.tex
@@ -40,14 +40,18 @@ cps2pch --  Converts a pitch-class value into cycles-per-second for equal divisi
 
 
 %\begin{tabular}{cc}
-\textbf{Note} \\ &
+\textbf{Note}
+ \\
+  &
 
  
 
 
  
 \begin{enumerate}
-\item The following are essentially the same 
+\item 
+
+ The following are essentially the same 
 
 
  ia  =  \emph{cpspch}
@@ -58,9 +62,13 @@ cps2pch --  Converts a pitch-class value into cycles-per-second for equal divisi
   8.02, 12, 2, 1.02197503906\\ 
              
 
-\item These are opcodes not functions 
+\item 
 
-\item Negative values of \emph{ipch}
+  These are opcodes not functions 
+
+\item 
+
+  Negative values of \emph{ipch}
  are allowed. 
 
 
@@ -201,7 +209,9 @@ instr 1:  icps = 281.429
 \end{lstlisting}
 \subsection*{See Also}
 
-\emph{cpspch}, \emph{cpsxpch}
+
+ \emph{cpspch}
+, \emph{cpsxpch}
 
 \subsection*{Credits}
 
