--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-10-24  Michael Gogins <gogins@pipeline.com>
+
+	* Renamed libsndfile.dll.0.0.19.
+    
+    * Updated documentation to provide improved directions for extending Csound
+    with builtin or plugin opcodes.
+    
+    * Fixed badly formatted tables in documentation.
+    
+    * Improved API documentation with simple examples.
+
+
 2004-10-26  John ffitch  <jpff@codemist.co.uk>
 
 	* OOps/ugrw1.c: Simplified some of the error reporting
