--- a/refman_header.tex
+++ b/refman_header.tex
@@ -3415,7 +3415,7 @@ The C++ API also provides a class hierarchy for doing algorithmic composition us
 
 \end{itemize}
 
-\subsection{An Example Using the Csound API}
+\section{An Example Using the Csound API}
 
 The Csound command--line program is itself built using the Csound API. Its code reads in full as follows:
 
@@ -3439,7 +3439,7 @@ int main(int argc, char **argv)
 }
 \end{lstlisting}
 
-\subsection{An Example Using the CsoundVST C++ API}
+\section{An Example Using the CsoundVST C++ API}
 
 CsoundVST extends the Csound API with C++. There is a C++ class for the Csound API proper, another C++ class for manipulating Csound files in code, and additional classes for algorithmic composition based on music space. All these C++ classes also have a Python interface in the \texttt{CsoundVST} Python extension module.
 
