--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-11  John ffitch  <jpff@codemist.co.uk>
+
+	* Engine/fgens.c: Removed static variables ftp and nargs and used
+	arguments instead.  Simplifications all over
+
 2004-11-10  John ffitch  <jpff@codemist.co.uk>
 
 	* H/csdl.h (FLINKAGE): defined
