--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@
 
 	* Changed the Python interface to CsoundVST to allow Python programmers
     to derive new classes in Python from CsoundVST.Node, and these new classes
-    will function as C++ Node * objections in the CsoundVST C++ internals. This enables
-    Python Nodes to function as regular nodes in music graphs.
+    will function as C++ Node * objects in the CsoundVST C++ internals. This enables
+    Python-derived Nodes to function just like regular C++ Nodes in music graphs.
 
 2004-11-11  John ffitch  <jpff@codemist.co.uk>
 
