Changes for CounterpointNode, bidirectional polymorphism, optimized boost::numeric::ublas.

--- a/refman_header.tex
+++ b/refman_header.tex
@@ -205,6 +205,7 @@ This is a ``to do'' list, not necessarily complete, and in no particular order o
 \item See also the \texttt{To-fix-and-do} file in the \texttt{csound5} directory.
 \item Create better examples, especially to demonstrate the use of Python and of VST plugins. One example should be a live performance instrument with a Python GUI that controls instrument parameters or algorithmic composition parameters in real time.
 \item Complete the work of making Csound multi-instantiable.
+\item \texttt{intseg} opcode that would act like a Buchla sequencer: for duration x0 hold level y0, for duration x1 hold level y1, etc.
 \end{enumerate}
 
 %\input{../manual/prefacetop.tex}
