--- a/refman_header.tex
+++ b/refman_header.tex
@@ -206,6 +206,8 @@ This is a ``to do'' list, not necessarily complete, and in no particular order o
 \item Create better examples, especially to demonstrate the use of Python and of VST plugins. One example should be a live performance instrument with a Python GUI that controls instrument parameters or algorithmic composition parameters in real time.
 \item Complete the work of making Csound multi-instantiable.
 \item \texttt{intseg} opcode that would act like a Buchla sequencer: for duration x0 hold level y0, for duration x1 hold level y1, etc.
+\item Make release envelopes work identically for MIDI, VST, and score--driven performance.
+\item Make real--time audio restartable in CsoundVST.
 \end{enumerate}
 
 %\input{../manual/prefacetop.tex}
