--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
-2005-01-16  John ffitch  <jpff@codemist.co.uk>
+005-01-16  John ffitch  <jpff@codemist.co.uk>
 
 	* InOut/pa_blocking.c (paBlockingWriteStreamCallback): Fixed
 	incorrect declaration
 
-2005-01-06  John ffitch  <jpff@codemist.co.uk>
+2005-01-12  Michael Gogins <gogins@pipeline.com>
+
+	* Call Pa_Terminate after Pa_AbortStream calls in rtclose_. 
+	This helps with restarting Csound and CsoundVST.
+
+22005-01-06  John ffitch  <jpff@codemist.co.uk>
 
 	* All over added first arg to opcodes of the ENVIRON structure
 
