--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-22  Michael Gogins <gogins@pipeline.com>
+
+	* Added csoundSetFLTKThreadLocking and csoundGetFLTKThreadLocking
+	calls to the Csound API. This controls whether or not the FLTK
+	widget thread calls Fl::lock and Fl::unlock (the default), or not.
+	Programs with their own performance thread or FLTK thread may
+	wish to disable Csound's FLTK thread locking.
+
 2005-01-20  Michael Gogins <gogins@pipeline.com>
 
 	* Created a working NSIS installer for Windows -- does not
