--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-23  John ffitch  <jpff@codemist.co.uk>
+
+	* OOps/ugens2.c (tabli): Unwrap thwo case so tests outside loop
+
 2005-02-23	Istvan Varga	<istvan@csounds.com>
 	* InOut/midisend.c:
 	* OOps/midiout.c:
